# netblackbox

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README-CROSS-PLATFORM.md  README.md  ROADMAP.md  config.cross-platform.example.json  config.example.json  install.sh  migrate-macos.sh  nbb.py  netblackbox.py  pyproject.toml  rollback-macos.sh  uninstall.sh
.github/workflows/: ci.yml
docs/: ADAPTIVE_SAMPLING.md  BRANCH.md  CROSS_PLATFORM.md  DECISIONS.md  EXTERNAL_PROBES.md  INSTALLATION.md  MIGRATION_MACOS.md  NEXT.md  NOTE.md  PLUGINS.md  READY.md  SAMPLE_BUFFER.md  STATUS.md
scripts/: post_install_check.sh
src/netblackbox/: README.txt  __init__.py  __main__.py  app.py  buffer.py  bundle_analysis.py  bundle_verifier.py  config.py  database_backup.py  dns_probes.py  forensic_bundle.py  forensic_report.py  incident_summary.py  incidents.py  incidents_route.py  models.py  platforms.py  plugins.py  probes.py  sample_storage.py  sampling.py  server_app.py  sqlite_guard.py  storage.py  timeline.py  timeline_route.py
tests/: test_app_adaptive_sampling.py  test_app_sample_buffer.py  test_app_sample_context.py  test_bundle_analysis.py  test_bundle_verifier.py  test_classification.py  test_config_paths.py  test_database_backup.py  test_dns_probes.py  test_forensic_bundle.py  test_forensic_report.py  test_forensics.py  test_incident_summary.py  test_incidents.py  test_incidents_route.py  test_macos_scripts.py  test_measurement_persistence.py  test_platform_selection.py  test_plugin_discovery.py  test_plugins.py  test_sample_buffer.py  test_sample_context.py  test_sample_storage.py  test_sampling.py  test_sampling_config.py  test_server_app.py  test_sqlite_guard.py  test_storage.py  test_timeline.py  test_timeline_route.py
