[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "netblackbox"
version = "0.2.0"
description = "Cross-platform network outage recorder and diagnostic toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Albano Manoni" }]
dependencies = []

[project.scripts]
netblackbox = "netblackbox.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
